train.py now runs, but there are some issues with the columns we want t choose to build the final df with the necessary features.

--- a/research/DEPART_playground.ipynb
+++ b/research/DEPART_playground.ipynb
@@ -16,7 +16,7 @@
         "id": "mUT7xluRq6pn"
       },
       "source": [
-        "# DEPART: Data exploration and preliminary ML model training\n",
+        "# DEPART: Data exploration and preliminary ML model train\n",
         "\n",
         "__D__elay __E__stimation and __P__rediction for __A__ircraft __R__outing and __T__imes.\n",
         "\n"
@@ -70,7 +70,7 @@
         "\n",
         "- Get the dataset\n",
         "- Understand the data, the attributes and their correlations\n",
-        "- Split the data into training and test set\n",
+        "- Split the data into train and test set\n",
         "- Apply normalisation, scaling and other transformations to the attributes if needed\n",
         "- Build a machine learning model\n",
         "- Evaluate the model and investigate the errors\n",
@@ -663,7 +663,7 @@
       "source": [
         "### Feature Engineering: Computing `delay` column\n",
         "\n",
-        "The dataset doesn't provide information about delays directly, so we must compute a new feature that indicates whether a flight was delayed or not before splitting the data into training and test set.\n",
+        "The dataset doesn't provide information about delays directly, so we must compute a new feature that indicates whether a flight was delayed or not before splitting the data into train and test set.\n",
         "\n",
         "We must process dates and times first, as they are stored as strings. This allows us to use operators to compare dates in a meaningful way."
       ]
@@ -863,7 +863,7 @@
         "id": "Hx_qk1-vlz4f"
       },
       "source": [
-        "## 2. Splitting the data into training and test sets"
+        "## 2. Splitting the data into train and test sets"
       ]
     },
     {
@@ -2478,7 +2478,7 @@
         "\n",
         "# Define the XGB model\n",
         "XGB = XGBClassifier(max_depth=3,                    # Depth of each tree\n",
-        "                            learning_rate=0.1,            # How much to shrink error in each subsequent training. Trade-off with no. estimators.\n",
+        "                            learning_rate=0.1,            # How much to shrink error in each subsequent train. Trade-off with no. estimators.\n",
         "                            n_estimators=5,             # How many trees to use, the more the better, but decrease learning rate if many used.\n",
         "                            verbosity=1,                  # If to show more errors or not.\n",
         "                            objective='binary:logistic',  # Type of target variable.\n",
